--- a/header.html
+++ b/header.html
@@ -1,9 +1,28 @@
 <html>
-
-
-
-
-
-
-
+    <head>
+        <title> Dashboard App Inatel </title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="scripts.js"></script>
+    </head>
+    
+    <body>
+        <header id="head">
+            <div id="menu">ICONE</div>
+            <div id="perfil">ICONE</div>
+        </header>
+        <main>
+            <div id="mensagens">
+            <div id="user_name">Olá Raphael!</div>
+            <div id="mns_box">
+                <div id="icon">ICONE</div>
+                <div id="mns">Você possui um armário reservado com entrega para hoje...</div>
+            </div>
+            <div id="mns_box">
+                <div id="icon">ICONE</div>
+                <div id="mns">Você possui uma pendência no financeiro...</div>
+            </div>
+            </div>
+            </div>
+        </main>
+    </body>
 </html>
